--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,13 +2,51 @@
 <html>
 <head>
   <title>Blocmetrics</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+
 <body>
 
+   <div class="container">
+     <ul class="nav nav-tabs">
+		<li class="navbar-left"><%= link_to "Home", root_path %></li>
+		<li class="navbar-left"><%= link_to "About", welcome_about_path %></li>
+		<% if user_signed_in? %>
+		<li class="navbar-text navbar-right"> Welcome, <%= current_user.email %></li>
+   		<li class="navbar-right"><%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %></li> 
+   		<li class="navbar-right"><%= link_to "Sign Out", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %></li>
+ 		<% else %>
+   		<li class="navbar-right"><%= link_to "Sign Up", new_user_registration_path, :class => 'navbar-link'  %></li>
+   		<li class="navbar-right"><%= link_to "Sign In", new_user_session_path, :class => 'navbar-link'  %></li>
+ 		<% end %>
+ 	</ul>
+
+	<div class="flash">
+    <% if flash[:notice] %>
+      <div class="alert alert-success">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:notice] %>
+      </div>
+    <% elsif flash.now[:alert] %>
+      <div class="alert alert-danger">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash.now[:alert] %>
+      </div>
+    <% elsif flash[:alert] %>
+      <div class="alert alert-warning">
+        <button type="button" class="close" data-dismiss="alert">&times;</button>
+        <%= flash[:alert] %>
+      </div>
+    <% end %>
+    </div>
+
+
 <%= yield %>
+</div>
 
 </body>
 </html>
+
