--- a/app/views/registered_applications/edit.html.erb
+++ b/app/views/registered_applications/edit.html.erb
@@ -1,2 +1,2 @@
-<h1>RegisteredApplications#edit</h1>
-<p>Find me in app/views/registered_applications/edit.html.erb</p>
+<h1>Update <%= @registered_application.name %></h1>
+<%= render 'form' %>
