--- a/app/views/registered_applications/_form.html.erb
+++ b/app/views/registered_applications/_form.html.erb
@@ -1,7 +1,7 @@
-<% form_for (@registered_applications) do %>
+<%= form_for(@registered_application) do |f| %>
   <% if @registered_application.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(@registered_application.errors.count, "error") %> prohibited this wiki from being saved:</h2>
+      <h2><%= pluralize(@registered_application.errors.count, "error") %> prohibited this application from being saved:</h2>
 
       <ul>
       <% @registered_application.errors.full_messages.each do |message| %>
