--- a/app/views/registered_applications/new.html.erb
+++ b/app/views/registered_applications/new.html.erb
@@ -1,2 +1,2 @@
-<h1>RegisteredApplications#new</h1>
-<p>Find me in app/views/registered_applications/new.html.erb</p>
+<h1>Create a new Registered Application</h1>
+<%= render 'form' %>
