--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,6 @@
-<h1>Users#show</h1>
-<p>Find me in app/views/users/show.html.erb</p>
+<div class="jumbotron">
+	<h1>Users Show Page</h1>
+	<p>Blocmetris is an analytics service and reporting tool that you can use with web apps to track user activity.</p>
+</div>
+
+
